--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.border-gradient {
+  border-image-slice: 1;
+}
+
+.border-gradient-primary {
+  border-image-source: linear-gradient(to left, theme('colors.amber.400'), theme('colors.amber.600'));
+}
