--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -12,25 +12,25 @@
 }
 
 h1 {
-  @apply text-4xl font-semibold text-slate-900;
+  @apply text-4xl font-semibold;
 }
 
 h2 {
-  @apply text-3xl font-semibold text-slate-900;
+  @apply text-3xl font-semibold;
 }
 
 h3 {
-  @apply text-2xl font-semibold text-slate-900;
+  @apply text-2xl font-semibold;
 }
 
 h4 {
-  @apply text-xl font-semibold text-slate-900;
+  @apply text-xl font-semibold;
 }
 
 p, li {
-  @apply text-slate-600;
+  @apply text-slate-500;
 }
 
-a {
-  @apply text-blue-600;
+.markdown a {
+  @apply underline;
 }
